# K-R_C_programming

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.b8d9c3e  bool.h  main.c
ch_3_flow_control/: chapter_3_flow_control.h  ex_3-2_escape.h  ex_3-3_expand.h  ex_3-5_itob.h
ch_4_functions/: bool.h  ch_4-11_quick_sort.h  ch_4-3_calculator.h  chapter_4_functions.h  ex_4-13_reverse_recursive.h  ex_4-1_strindex.h
ch_5_pointers_and_arrays/: ch_5_stuff.h  chapter_5_pointers_and_arrays.h  ex_5-1.h  ex_5.h
